📝 Update 1장 데이터 모델링의 이해.md

--- a/DataBase/SQLD/1-1. 데이터 모델링의 이해.md
+++ b/DataBase/SQLD/1-1. 데이터 모델링의 이해.md
@@ -1,15 +1,17 @@
 # 1장 데이터 모델링의 이해
 
-  
+​        
 
 ### 데이터 모델링이란
 
 - 정보시스템을 구축하기 위한 데이터 관점의 업무 분석 기법
 - 현실세게의 데이터에 대해 약속된 표기법에 의해 표현하는 과정
 
-  ![image-20220524231011659](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20220524231011659.png)
+![a](https://mblogthumb-phinf.pstatic.net/MjAxNjExMDRfNTEg/MDAxNDc4MjE5ODA0NTgx.C_IIOauPdGultmSWICFoQs-7XHsyE1yE44FaV9jKtz8g.DMBnGt4_zDq8Ec8mxYt4PI8pyw8ZT4u25zPsliUEuRYg.JPEG.tomatosoft/2016-11-02_15%3B07%3B33.jpg?type=w800)
 
-  
+
+
+​      
 
 ### 모델링 특징
 
@@ -17,7 +19,7 @@
 2) 단순화 : 복잡한 현실세계를 약속된 규약을 통해 쉽게 이해할 수 있도록 함
 3) 명확화 : 애매모호함 제거, 정확하게 현상 기술
 
-  
+​      
 
 ### 모델링 관점
 
@@ -25,7 +27,7 @@
 2.  프로세스 관점 (How) : 실제하고 있는 업무는 무엇인지, 무엇을 해야하는지를 모델링
 3. 상관 관점 (Interaction) : 업무가 처리하는 일의 방법에 따라 데이터는 어떻게 영향을 받고 있는지 모델링
 
-  
+​      
 
 ### 모델링의 중요성
 
@@ -33,7 +35,7 @@
 2. 간결한 표현
 3. 데이터 품질 
 
-  
+​      
 
 ### 모델링의 유의성
 
@@ -41,7 +43,7 @@
 2. 비유연성 : 사소한 업무 변경에 데이터 모델이 수시로 변경되면 안됨 -> 분리해서 유연성 UP
 3. 비일관성 : 신용 상태에 대한 갱신 없이 고객의 납부 이력 정보 갱신 안됨
 
-  
+​      
 
 ### 모델링 3요소
 
@@ -49,7 +51,7 @@
 2. 속성 attributes ○
 3. 관계 relationships ◇
 
-  
+​      
 
 ### 모델링 과정
 
@@ -66,15 +68,15 @@
 3. 물리적 데이터 모델링  
    - 실제로 데이터베이스에 이식할 수 있도록 성능, 저장 등 물리적인 성격 고려하여 설계
 
-  
+​      
 
 ### 데이터 독립성 요소
 
-![image-20220524231101512](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20220524231101512.png)
+![image-20220524231101512](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http%3A%2F%2Fcfile30.uf.tistory.com%2Fimage%2F9983FE405BF834A51178D4)
 
 > ANSI-SPARC에서 정의한 데이터베이스 3단계 구조
 
-​    
+​        
 
 1. 외부 스키마 (External Schema)
    - 여러 개의 사용자 관점으로 구성, 즉 개개 사용자가 보는 개인적 DB 스키마
@@ -87,7 +89,7 @@
    - 실제 데이터가 저장되는 방법을 표현하는 스키마
      - 물리적 데이터 독립성 : 내부 스키마가 변경되어도 외부/개념 스키마에 영향 없음
 
-  
+​      
 
 ### 데이터 독립성의 효과
 
@@ -95,7 +97,7 @@
 2. 계층별 뷰에 영향을 주지 않고 변경 가능
 3. 단계별 스키마에 따라 DDL과 DML이 다름을 제공
 
-  
+​      
 
 ### 데이터 모델 표기법
 
@@ -113,7 +115,7 @@
 - 관계의 명칭은 관계 표현에 있어서 매우 중요
 - 하나의 관계는 실선 표기, 다수 참여의 관계는 까마귀발 모양
 
-  
+​      
 
 ### 좋은 데이터 모델의 요소
 
@@ -124,18 +126,18 @@
 5. 의사소통 : 데이터 모델이 의사소통 도구로서의 역할 수행, 업무 규칙들이 데이터 모델에 자세하게 표현
 6. 통합성 : 데이터가 한 번만 정의되고 다른 영역에서 참조 및 활용
 
-  
+​      
 
 ---
 
-  
+​    
 
 ### 엔티티란 
 
 - 업무에 필요하고 유용한 정보를 저장/관리 위한 집합적인 것
 - 테이블!
 
-  
+​    
 
 ### 엔티티 특징
 
@@ -147,7 +149,7 @@
 6. 다른 엔티티와 최소 한 개 이상의 관계가 있어야 함  
    (단, 통계성 엔티티나 코드성 엔티티의 경우 관계 생략 가능)
 
-  
+​    
 
 ### 엔티티 분류
 
@@ -168,7 +170,7 @@
 3. 스스로 생성 여부
    - 독립 엔티티 / 의존 엔티티 
 
-​    
+​        
 
 ### 엔티티 명명 규칙
 
@@ -178,11 +180,11 @@
 - 모든 엔티티에서 유일하게 이름 부여
 - 엔티티 생성 의미대로 이름 부여 
 
-   
+​       
 
 -----
 
-   
+​       
 
 ### 속성(Attribute)이란
 
@@ -190,7 +192,7 @@
 - 엔티티에 대한 자세하고 구체적인 정보를 나타냄
 - 컬럼!
 
-​    
+​        
 
 ### 속성의 관계
 
@@ -200,7 +202,7 @@
 
 - 속성도 집합임
 
-​     
+​         
 
 ### 속성의 특성에 따른 분류
 
@@ -210,7 +212,7 @@
    -> 꼭 필요한 경우에만 정의 (정합성 유지를 위해)   
    데이터를 조회할 때 빠른 성능을 낼 수 있도록 하기 위해 원래 속성의 값을 계산하여 저장할 수 있도록 만든 속성 (ex. 이자 (**∵** 계산된 값))
 
-  
+​      
 
 ### 도메인이란
 
@@ -218,7 +220,7 @@
 - 즉, 엔티티 내에서 속성에 대한 데이터 타입과 크기 그리고 제약사항을 지정하는 것
 - 도메인 정의 + 용어사전 => 용어적 표준과 데이터 타입의 일관성 확보
 
-​     
+​         
 
 ### 속성의 명명 규칙
 
@@ -227,11 +229,11 @@
 - 약어 사용 가급적 제한
 - 전체 데이터 모델에서 유일한 이름 사용 (충돌 해결)
 
-   
+​       
 
 ------
 
-   
+​       
 
 ### 관계(relation)란
 
@@ -239,7 +241,7 @@
 - 엔티티와 엔티티 간 연관성 표현
 - 관계 페어링 : 각 엔티티의 인스턴스들은 자신이 관련된 인스턴스와 관계의 [어커런스](https://wordrow.kr/%EC%9D%98%EB%AF%B8/%EC%96%B4%EC%BB%A4%EB%9F%B0%EC%8A%A4/)로 참여하는 형태
 
-​     
+​         
 
 ### 클래스 다이어그램 관계
 
@@ -248,7 +250,7 @@
 - 연관관계(존재) : 항상 이용하는 관계 => 실선 (ex. 부원과 사원 엔티티 간의 '소속' 관계)
 - 의존관계(행위) : 상대방 행위에 대해 관계가 형성 => 점선 (ex. 주문과 배송 엔티티 간의 '배송근거' 관계)
 
-   
+​       
 
 ### 관계의 표기법
 
@@ -256,7 +258,7 @@
 - 관계차수 : 참여자의 수 표현 (1:1, 1:M, M:N)
 - 관계선택사양 : 필수 관계, 선택 관계
 
-​    
+​        
 
 ###  관계 체크 사항
 
@@ -265,7 +267,7 @@
 3. 업무기술서, 장표에 관계연결에 대한 **규칙**이 서술되어 있는가?
 4. 업무기술서, 장표에 관계연결을 가능하게 하는 **동사**가 있는가?
 
-​       
+​           
 
 ### 식별자란
 
@@ -273,7 +275,7 @@
   (하나의 엔티티는 반드시 하나의 유일한 식별자가 존재)
 - 엔티티 내에서 인스턴스들을 구분할 수 있는 구분자
 
-​    
+​        
 
 ### 주식별자의 특징
 
@@ -282,7 +284,7 @@
 3. 불변성 : 주식별자의 값은 자주 변하지 않는 것이어야 함
 4. 존재성 : 주식별자가 지정되면 반드시 값이 들어와야 함 (Null 비허용)
 
-   
+​       
 
 ### 식별자 분류
 
@@ -299,7 +301,7 @@
    - 본질식별자 : 업무에 의해 만들어짐
    - 인조식별자 : 업무적으로 만들어지진 않지만, 원조식별자가 복잡한 구성을 갖고 있기 때문에 인위적으로 만듬
 
-​     
+​         
 
 ### 주식별자 도출 기준
 
@@ -307,7 +309,7 @@
 - 이름으로 기술되는 것(명칭, 내역 등)은 가능하면 지정하지 않음
 - 복합으로 구성 시, 너무 많은 속성이 포함되지 않도록 함
 
-​    
+​        
 
 ### 식별자 관계
 
@@ -315,7 +317,7 @@
 - null 불가, 반드시 부모 엔티티 생성 (1:1 또는 1:M 관계)
 - 단점 : 지속적으로 연결하면 PK 증가 -> 개발 복잡성, 오류 가능성
 
-​     
+​         
 
 ### 비식별자 관계
 
@@ -323,3 +325,5 @@
 - 부모 없는 자식 생성 가능
 - 자식 엔티티에 별도의 주식별자를 생성하는 것이 유리하다고 판단될 때 외부식별자로 표현
 - 단점 : 기준 속성이 상속되지 않음 -> 불필요한 조인 증가, 성능 저하
+
+​    
